--- a/config.json
+++ b/config.json
@@ -1,10 +1,19 @@
-{   "port": "80",
+{
+    "port": "80",
     "secret_API": "kFd5wTgN9rLzYjC8pM3xVb2sGJ6uHqQ5KkLvU1oPzTnW9iB",
+    
     "mysql": {
-        "host": "localhost",
-        "user": "root",
-        "password": "your-password-here", 
-        "database": "servers"
-      }
+      "host": "localhost",
+      "user": "root",
+      "password": "",
+      "database": "servers"
+    },
+  
+    "bot": {
+      "enabled": true,
+      "BOT_TOKEN": "",
+      "GUILD_ID": "",
+      "BOT_CLIENT_ID": ""
+    }
   }
   
