--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord.js": "^14.18.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mysql": "^2.18.1"
